# djangodocker

./: README.md  pyproject.toml
djangodocker/: settings.py
